# Notewright

./: .gitattributes  README.md  index.html
backend/: database.db  pyproject.toml  server.py
backend/src/: ai_generator.py  ai_generator_combined.py  ai_generator_image.py  ai_generator_old.py  app.py  prompts.py
backend/src/database/: db.py  models.py
backend/src/media/Tex/: 1b75a6d9259d3ed9.tex  220963af8d3e5213.tex  3026c118aacfe59e.tex  472a4dee03dcade2.tex  7f3e32784b9fd141.tex  e6e4d362f0e1128d.tex  f436c722b9fd47ff.tex
backend/src/media/videos/manim_scene_0c09d9bc/720p30/partial_movie_files/TwoDPDF/: partial_movie_file_list.txt
backend/src/media/videos/manim_scene_233c3270/720p30/partial_movie_files/BFSGraphVisualization/: partial_movie_file_list.txt
backend/src/media/videos/manim_scene_31fc0241/720p30/partial_movie_files/BFSGraphVisualization/: partial_movie_file_list.txt
backend/src/media/videos/manim_scene_3b632682/720p30/partial_movie_files/BFSVisualization/: partial_movie_file_list.txt
backend/src/media/videos/manim_scene_4477c09f/720p30/partial_movie_files/BFSTraversal/: partial_movie_file_list.txt
backend/src/media/videos/manim_scene_54e530a4/720p30/partial_movie_files/AverageToInstantaneous/: partial_movie_file_list.txt
backend/src/media/videos/manim_scene_7161cedd/720p30/partial_movie_files/PDFVolumeIntegration/: partial_movie_file_list.txt
backend/src/media/videos/manim_scene_726fe148/720p30/partial_movie_files/DerivativeLimitVisualization/: partial_movie_file_list.txt
backend/src/routes/: generate.py
frontend/: package-lock.json  (+1 more)
(+29 files in other folders)
